Dev/merge civil t2 (#108)
* updated version as per civil branch name and tranche

* New 17.103.1-CIVIL-T2-SNAPSHOT

* CAD-1193 CAD-1127 updated validation rules for civil offences

* CAD-1193 CAD-1127 updated validation rules for civil offences - 2

* CAD-1193 CAD-1127 updated validation rules for civil offences - 3

* CAD-1193 CAD-1127 updated validation rules for civil offences - 4

* CAD-1193 CAD-1127 sonar issue fixes

* New 17.103.2-CIVIL-T2-SNAPSHOT

* CAD-1193 CAD-1127 further fixes

* New 17.103.3-CIVIL-T2-SNAPSHOT

* Revert "CAD-1193 CAD-1127 updated validation rules for civil offences"

This reverts commit 3b7dc890471e2458dee430e6faf6ba076069acca.

Revert "CAD-1193 CAD-1127 updated validation rules for civil offences - 2"

This reverts commit ca868bcef74b1cb4ebbf3beb22539d51a092c9b4.

Revert "CAD-1193 CAD-1127 updated validation rules for civil offences - 3"

This reverts commit 32bc9af928154bd4e48186555f7f97249b602207.

Revert "CAD-1193 CAD-1127 updated validation rules for civil offences - 4"

This reverts commit 99a9913bba7b5d604d75d644277b04aa3b1c754d.

Revert "CAD-1193 CAD-1127 sonar issue fixes"

This reverts commit efedc1dd5ea7c7e04a0e489dae200dd55b5b55e6.

Revert "CAD-1193 CAD-1127 further fixes"

This reverts commit 51d9f7c91c9cbc27d6e6f920ac1129f64e467fe5.

* CAD-1193 CAD-1127 adding offence code validation for civil

* fix version for enforcer plugin to fix build failure

* CAD-1127 IT test fix

* CAD-1127 IT test fix 2

* CAD-1127 IT test fix 3

* New 17.103.4-CIVIL-T2-SNAPSHOT

* CAD-1127: add integration tests for civil case blacklist validation

* remove unused field

* New 17.103.5-CIVIL-T2-SNAPSHOT

* New 17.103.6-CIVIL-T2-SNAPSHOT

* Added log statements

* New 17.103.7-CIVIL-T2-SNAPSHOT

* Added log statements

* Updated

* New 17.103.8-CIVIL-T2-SNAPSHOT

* CAD-1253 added business validation tests

* CAD-1253 added business validation tests

* CAD-1253 added business validation tests

* CAD-1253 added business validation tests

* CAD-125